# branches-animation-OpenGLRenderer

./: CMakeLists.txt  OpenGLRenderer.dist  Setup.cmake  SetupOpenGL.cmake  VisitorExpansion.txt
Display/OpenGL/: BlendCanvas.cpp  BlendCanvas.h  ColorStereoCanvas.cpp  ColorStereoCanvas.h  FadeCanvas.cpp  FadeCanvas.h  FrameBufferBackend.cpp  FrameBufferBackend.h  RenderCanvas.cpp  RenderCanvas.h  SplitScreenCanvas.cpp  SplitScreenCanvas.h  SplitStereoCanvas.cpp  SplitStereoCanvas.h  TextureCanvas.cpp  TextureCanvas.h  TextureCanvasBase.cpp  TextureCanvasBase.h  TextureCopy.cpp  TextureCopy.h
Meta/: OpenGL.h
Renderers/OpenGL/: BufferedRenderer.cpp  BufferedRenderer.h  CMakeLists.txt  ColorStereoRenderer.cpp  ColorStereoRenderer.h  CompositeCanvas.cpp  CompositeCanvas.h  FBOBufferedRenderer.cpp  FBOBufferedRenderer.h  GLCopyBufferedRenderer.cpp  GLCopyBufferedRenderer.h  LightRenderer.cpp  LightRenderer.h  Renderer.cpp  Renderer.h  RenderingView.cpp  RenderingView.h  ShaderLoader.cpp  ShaderLoader.h  SplitStereoRenderer.cpp  SplitStereoRenderer.h  StereoRenderer.cpp  StereoRenderer.h  TextureLoader.cpp  TextureLoader.h
Resources/: GLSLResource.cpp  GLSLResource.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLShaderAttributes.cpp  OpenGLShaderTextures.cpp  OpenGLShaderUniforms.cpp  PhongShader.cpp  PhongShader.h  UniformList.h
Scene/: DisplayListNode.cpp  DisplayListNode.h  DisplayListTransformer.cpp  DisplayListTransformer.h  ShadowLightPostProcessNode.cpp  ShadowLightPostProcessNode.h
shaders/: PhongShader.glsl  PhongShader.glsl.frag  PhongShader.glsl.vert
